h1. CHANGELOG

h3. 1.0.35 May 7, 2017

* update application.js for Rails 5.1

h3. 1.0.34 October 20, 2016

* try single quotes for data-turbolinks-track 'reload'

h3. 1.0.33 October 20, 2016

* data-turbolinks-track 'reload' requires double quotation marks

h3. 1.0.32 October 19, 2016

* change data-turbolinks-track 'true' to 'reload' for TurboLinks 5

h3. 1.0.31 September 6, 2016

* additional support for Bootstrap 4 (form styling)

h3. 1.0.30 September 4, 2016

* add support for Bootstrap 4

h3. 1.0.29 November 23, 2015

* add navlink for an admin interface if Thoughbot Administrate gem was selected in Rails Composer

h3. 1.0.28 November 4, 2015

* move navigation auth links to a new partial 'app/views/layouts/_nav_links_for_auth.html.erb'

h3. 1.0.27 October 18, 2015

* create a file '1st_load_framework' instead of 'framework_and_overrides' to force loading a framework first (the asset pipeline loads files in a tree in alpha order)

h3. 1.0.26 May 8, 2015

* use Rails 'try' when testing if the current_user is an admin (contributed by bogdanvlviv)

h3. 1.0.25 March 8, 2015

* only apply styling for 'error_explanation' when not empty

h3. 1.0.24 November 16, 2014

* don't overwrite a Devise registration view if it already exists

h3. 1.0.23 October 6, 2014

* fix 'Remember Me' checkbox on 'Sign In' form for Bootstrap

h3. 1.0.22 September 14, 2014

* add navlink for an admin interface if Upmin is present

h3. 1.0.21 August 12, 2014

* bootstrap-sass v3.2.0 changes

h3. 1.0.20 June 19, 2014

* generate admin links when OmniAuth is used with Pundit

h3. 1.0.19 June 4, 2014

* "require 'rails_helper'" not needed when it is include in the '.rspec' file

h3. 1.0.18 June 2, 2014

* update for RSpec 3.0

h3. 1.0.17 May 30, 2014

* add styling for forms when either Devise or OmniAuth is present

h3. 1.0.16 May 10, 2014

* add missing Devise form for password reset
* add navigation spec when Devise is used and RSpec is installed