@@ -9,8 +9,7 @@
 //
 // Read Sprockets README (https://github.com/rails/sprockets#sprockets-directives) for details
 // about supported directives.
-//
-
+//F
 //= require rails-ujs
 //= require turbolinks
 //= require bootstrap-sprockets
