@@ -1,3 +1,3 @@
 module RailsLayout
-  VERSION = "1.0.35"
+  VERSION = "1.0.36"
 end
